Optimize router. Implement Cars: Controller, service, model, auth functions, views.
Change validate membership logic.
Change logic register. Remove car fields.

Move all auth functions to authFunctions.js.
Fix getCars function to return only my cars.

--- a/views/ajaxSnippets/validationResult.ejs
+++ b/views/ajaxSnippets/validationResult.ejs
@@ -33,22 +33,29 @@
                     </p>
                     <p>
                         <b>
+                            Car Name:
+                        </b>
+                        <%- car?.name%>
+
+                    </p>
+                    <p>
+                        <b>
                             Car Brand:
                         </b>
-                        <%- customer.carInfo.brand%>
+                        <%- car?.brand%>
 
                     </p>
                     <p>
                         <b>
                             Model:
                         </b>
-                        <%- customer.carInfo.model%>
+                        <%- car?.model%>
                     </p>
                     <p>
                         <b>
                             Plate:
                         </b>
-                        <%- customer.carInfo.plate%>
+                        <%- car?.plate%>
                     </p>
 
                     <p>
