--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -7,11 +7,18 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/validateMembership">
+            <a class="nav-link" href="/cars">
                 <i class="fas fa-car menu-icon"></i>
+                <span class="menu-title">Manage My Cars</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/validateMembership">
+                <i class="fas fa-warehouse menu-icon"></i>
                 <span class="menu-title">Validate Membership</span>
             </a>
         </li>
+       
         <!-- <li class="nav-item">
             <a class="nav-link" href="/activity">
                 <i class="fas fa-book menu-icon"></i>
