--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -51,74 +51,87 @@
                                     <div class="col-lg-6">
                                         <div class="form-group">
                                             <label class="required" for="email"><%= lingua.email%></label>
-                                            <input type="email" id="email" name="email" class="form-control form-control-lg" placeholder="example@gmail.com" required />
+                                            <input type="email" id="email" name="email"
+                                                class="form-control form-control-lg" placeholder="example@gmail.com"
+                                                required />
 
                                         </div>
-
+                                    </div>
+                                    <div class="col-lg-6">
                                         <div class="form-group">
                                             <label for="password" class="required"><%= lingua.password%></label>
 
-                                            <input type="password" id="password" name="password" class="form-control mb-3 form-control-lg" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
+                                            <input type="password" id="password" name="password"
+                                                class="form-control mb-3 form-control-lg"
+                                                pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                                                title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
                                                 placeholder="Password" required />
                                             <div id="message">
                                                 <p>
                                                     <%= lingua.passwordRequirement%>
                                                 </p>
-                                                <p> <span id="letter" class="invalid"> <b>1 <%= lingua.lowerCase%></b> </span>, <span id="capital" class="invalid"><b>1 <%= lingua.upperCase%></b></span>, <span id="number" class="invalid"> <b>1 <%= lingua.number%></b></span>,
-                                                    <span id="length" class="invalid"> <b>8 <%= lingua.characters%></b></span>
+                                                <p> <span id="letter" class="invalid"> <b>1 <%= lingua.lowerCase%></b>
+                                                    </span>, <span id="capital" class="invalid"><b>1
+                                                            <%= lingua.upperCase%></b></span>, <span id="number"
+                                                        class="invalid"> <b>1 <%= lingua.number%></b></span>,
+                                                    <span id="length" class="invalid"> <b>8
+                                                            <%= lingua.characters%></b></span>
                                                 </p>
                                             </div>
                                         </div>
-
+                                    </div>
+                                    <div class="col-lg-6">
                                         <div class="form-group">
                                             <label for="firstName" class="required"><%= lingua.name%></label>
 
-                                            <input type="text" id="firstName" name="firstName" class="form-control mb-3 form-control-lg" placeholder="First Name" required autofocus />
+                                            <input type="text" id="firstName" name="firstName"
+                                                class="form-control mb-3 form-control-lg"
+                                                placeholder="<%= lingua.name%>" required autofocus />
                                         </div>
+                                    </div>
+                                    <div class="col-lg-6">
 
                                         <div class="form-group">
                                             <label for="lastName" class="required"><%= lingua.lastName%></label>
 
-                                            <input type="text" id="lastName" name="lastName" class="form-control mb-3 form-control-lg" placeholder="LastName" required autofocus />
+                                            <input type="text" id="lastName" name="lastName"
+                                                class="form-control mb-3 form-control-lg"
+                                                placeholder="<%= lingua.lastName%>" required autofocus />
                                         </div>
-
+                                    </div>
+                                    <div class="col-lg-6">
                                         <div class="form-group">
                                             <label for="phoneNumber" class="required"><%= lingua.phoneNumber%></label>
 
-                                            <input type="tel" id="phoneNumber" name="phoneNumber" class="form-control mb-3 form-control-lg" placeholder="XXX-XXX-XXXX" required autofocus />
+                                            <input type="tel" id="phoneNumber" name="phoneNumber"
+                                                class="form-control mb-3 form-control-lg" placeholder="XXX-XXX-XXXX"
+                                                required autofocus />
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group">
                                             <label for="dateOfBirth" class="required"><%= lingua.dateOfBirth%></label>
 
-                                            <input type="date" id="dateOfBirth" name="dateOfBirth" class="form-control mb-3 form-control-lg" required autofocus />
+                                            <input type="text" id="dateOfBirth" onfocus="(this.type='date')" name="dateOfBirth" placeholder="mm/dd/yyyy"
+                                                class="form-control mb-3 form-control-lg" required autofocus />
                                         </div>
+                                    </div>
+                                    <div class="col-lg-6">
+
                                         <div class="form-group">
                                             <label for="city" class="required"><%= lingua.city%></label>
 
-                                            <input type="text" id="city" name="city" class="form-control form-control-lg" placeholder="City" required autofocus />
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="carBrand" class="sr-only"><%= lingua.carBrand%></label>
-
-                                            <input type="text" id="carBrand" name="brand" class="form-control mb-3 form-control-lg" placeholder="Car Brand" autofocus />
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="carModel" class="sr-only"><%= lingua.carModel%></label>
-
-                                            <input type="text" id="carModel" name="model" class="form-control mb-3 form-control-lg" placeholder="Car Model" autofocus />
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="carPlate" class="sr-only"><%= lingua.carPlate%></label>
-
-                                            <input type="text" id="carPlate" name="plate" class="form-control mb-3 form-control-lg" placeholder="Car Plate" autofocus />
+                                            <input type="text" id="city" name="city"
+                                                class="form-control form-control-lg" placeholder="City" required
+                                                autofocus />
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="mt-3">
-                                        <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end" type="submit"><%= lingua.create%></button>
+                                        <button
+                                            class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end"
+                                            type="submit"><%= lingua.create%></button>
                                     </div>
                                 </div>
                             </form>
@@ -147,8 +160,13 @@
     <!-- Custom js for this page-->
     <script src="../../js/dashboard.js"></script>
     <script src="../../js/register.js"></script>
+    <script src="./js/jquery.cookie.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
 
     <!-- End custom js for this page-->
 </body>
+<script>
+    jQuery(document).ready(function () { jQuery("#phoneNumber").mask("999-999-9999"); });
+</script>
 
 </html>
