--- a/views/cars/index.ejs
+++ b/views/cars/index.ejs
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>View User </title>
+    <title>My Cars </title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../vendors/feather/feather.css">
     <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css">
@@ -21,112 +21,99 @@
     <!-- Plugin css for this page -->
     <link rel="stylesheet" href="../vendors/datatables.net-bs4/dataTables.bootstrap4.css">
     <link rel="stylesheet" href="../js/select.dataTables.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.4/css/dataTables.bootstrap5.min.css">
     <!-- End plugin css for this page -->
     <!-- inject:css -->
     <link rel="stylesheet" href="../css/vertical-layout-light/style.css">
     <!-- endinject -->
     <link rel="shortcut icon" href="../images/favicon.png" />
+
 </head>
 
-<body class="sidebar-icon-only">
-    <div class="container-scroller">
-        <!-- partial:partials/_navbar.html -->
-        <%- include('../partials/navbar.ejs' , {user}); %>
+<!-- <body class="sidebar-icon-only"> -->
 
-        <!-- partial -->
+<body>
+    <div class="container-scroller">
+        <%- include('../partials/navbar.ejs' , {user}); %>
         <div class="container-fluid page-body-wrapper">
-            <!-- partial:partials/_sidebar.html -->
             <%- include('../partials/sidebar.ejs' , {user}); %>
-            <!-- partial -->
             <div class="main-panel">
                 <div class="content-wrapper">
-                    <h4>
-                        <% if(isMyProfile) {%>
-                        My Profile
-                        <% } else { %>
-                        View User
-                        <% } %>
-                    </h4>
-                    <% if(customer) { %>
-                    <div class="row text-left">
+                    <div class="row">
                         <div class="col-lg-12 d-flex flex-column">
                             <div class="row flex-grow">
-                                <div class="col-6 grid-margin stretch-card">
+                                <div class="col-12 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
-                                            <div class="table-responsive mt-1">
-                                                <div
-                                                    class="d-sm-flex justify-content-between align-items-start float-end">
-                                                    <a href="/edit-user/<%- customer.id%>?url=/view-user" data-id="user"
-                                                        type="button" class="btn btn-primary btn-icon-text">
-                                                        <i class=" mdi mdi-square-edit-outline"></i> Edit
-                                                    </a>
+                                            <div class="d-sm-flex justify-content-between align-items-start">
+                                                <div>
+                                                    <h4 class="card-title card-title-dash">My Cars</h4>
                                                 </div>
-                                                <table class="table table-hover">
+                                                <% if(user.cars.length < 1) { %>
+                                                <div>
+                                                    <a href="/create-car" class="btn btn-primary btn-icon-text"
+                                                        type="button">
+                                                        <i class="fas fa-plus btn-icon-prepend"></i>Add Car</a>
+                                                </div>
+                                                <% } %>
+                                            </div>
+                                            <br>
+                                            <div class="table-responsive  mt-1">
+                                                <table id="users" class="table table-hover stripe">
                                                     <thead>
                                                         <tr>
-                                                            <th>Personal Information</th>
-                                                            <th></th>
+                                                            <th>Name</th>
+                                                            <th>Brand</th>
+                                                            <th>Model</th>
+                                                            <th>Plate</th>
+                                                            <th>Action</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
+                                                        <% if(cars) { %>
+                                                        <% for(const car of cars) { %>
                                                         <tr>
-                                                            <td>Email</td>
                                                             <td>
-                                                                <%- customer.email%>
+                                                                <a class="btn-link" href="/car/<%- car.id%>">
+                                                                    <%- car.name %>
+                                                                </a>
                                                             </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Password</td>
-                                                            <td id="password">
-                                                                <!-- <%- customer.password%> -->
-                                                                *********
-                                                            </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Role</td>
                                                             <td>
-                                                                <%- customer.role%>
+                                                                <%- car.brand%>
                                                             </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Name</td>
                                                             <td>
-                                                                <%- customer.personalInfo.firstName + ' ' + customer.personalInfo.lastName %>
+                                                                <%- car.model%>
                                                             </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Phone Number</td>
                                                             <td>
-                                                                <%- customer.personalInfo.phoneNumber %>
+                                                                <%- car.plate %>
                                                             </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Birth Date</td>
-                                                            <td>
-                                                                <%= moment(customer.personalInfo.dateOfBirth).isValid() ? moment(customer.personalInfo.dateOfBirth).utc().format(shortDateFormat) : 'N/A' %>
 
+                                                            <td>
+                                                                <a href="/edit-car/<%- car.id%>?url=/cars" type="button"
+                                                                    class="btn btn-icon btn-icon-no-border no-margin">
+                                                                    <i class="far fa-edit icon-sm"></i>
+                                                                </a>
+
+                                                                <a id="deleteBtn"
+                                                                    onclick="return confirmDelete('/delete-car', '<%- car.id%>')"
+                                                                    class="btn btn-icon btn-icon-no-border no-margin">
+                                                                    <i class="fas fa-trash-alt icon-sm text-danger"></i>
+                                                                </a>
                                                             </td>
                                                         </tr>
+                                                        <% } %>
+                                                        <% } %>
                                                     </tbody>
                                                 </table>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <% if(customer.hasSubscription){ %>
-                                <div class="col-6 grid-margin stretch-card">
-                                    <div class="card card-rounded">
-                                        <div class="card-body">
-                                            <%- include('../partials/subscriptions/information.ejs' , {showManageBtn : true, customer : user, stripeSubscription, membershipStatus}); %>
-                                        </div>
-                                    </div>
-                                </div>
-                                <% } %>
                             </div>
                         </div>
                     </div>
-                    <% } %>
                 </div>
             </div>
         </div>
@@ -154,21 +141,22 @@
     <script src="../js/todolist.js"></script>
     <!-- endinject -->
     <!-- Custom js for this page-->
-    <!-- <script>
-        var customer = <%# JSON.stringify(customer) %>;
-        console.log(customer);
-    </script> -->
+
     <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
     <script type="text/javascript" src="../js/account.js"></script>
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../js/dashboard.js"></script>
     <script src="../js/Chart.roundedBarCharts.js"></script>
-    <script src="../../js/register.js"></script>
 
     <!-- End custom js for this page-->
-
+    <script src="../js/helper-functions.js"></script>
+    <!-- Datatables -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.4/js/dataTables.bootstrap5.min.js"></script>
     <!-- Alerts Code -->
     <%- include('../partials/alerts.ejs', {message, alertType}); %>
+    <%- include('../partials/dataTable.ejs', {tableID : '#users'}); %>
 </body>
 
 </html>
