--- a/views/cars/view.ejs
+++ b/views/cars/view.ejs
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>View User </title>
+    <title>View Car </title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../vendors/feather/feather.css">
     <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css">
@@ -30,7 +30,6 @@
 
 <body class="sidebar-icon-only">
     <div class="container-scroller">
-        <!-- partial:partials/_navbar.html -->
         <%- include('../partials/navbar.ejs' , {user}); %>
 
         <!-- partial -->
@@ -41,13 +40,9 @@
             <div class="main-panel">
                 <div class="content-wrapper">
                     <h4>
-                        <% if(isMyProfile) {%>
-                        My Profile
-                        <% } else { %>
-                        View User
-                        <% } %>
+                        View Car
                     </h4>
-                    <% if(customer) { %>
+                    <% if(car) { %>
                     <div class="row text-left">
                         <div class="col-lg-12 d-flex flex-column">
                             <div class="row flex-grow">
@@ -57,72 +52,52 @@
                                             <div class="table-responsive mt-1">
                                                 <div
                                                     class="d-sm-flex justify-content-between align-items-start float-end">
-                                                    <a href="/edit-user/<%- customer.id%>?url=/view-user" data-id="user"
-                                                        type="button" class="btn btn-primary btn-icon-text">
+                                                    <a href="/edit-car/<%- car.id%>?url=/view-car" type="button"
+                                                        class="btn btn-primary btn-icon-text">
                                                         <i class=" mdi mdi-square-edit-outline"></i> Edit
                                                     </a>
                                                 </div>
                                                 <table class="table table-hover">
                                                     <thead>
                                                         <tr>
-                                                            <th>Personal Information</th>
+                                                            <th>Car information</th>
                                                             <th></th>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
                                                         <tr>
-                                                            <td>Email</td>
-                                                            <td>
-                                                                <%- customer.email%>
-                                                            </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Password</td>
-                                                            <td id="password">
-                                                                <!-- <%- customer.password%> -->
-                                                                *********
-                                                            </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Role</td>
-                                                            <td>
-                                                                <%- customer.role%>
-                                                            </td>
-                                                        </tr>
-                                                        <tr>
                                                             <td>Name</td>
                                                             <td>
-                                                                <%- customer.personalInfo.firstName + ' ' + customer.personalInfo.lastName %>
+                                                                <%- car.name%>
                                                             </td>
                                                         </tr>
-                                                        <tr>
-                                                            <td>Phone Number</td>
-                                                            <td>
-                                                                <%- customer.personalInfo.phoneNumber %>
-                                                            </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Birth Date</td>
-                                                            <td>
-                                                                <%= moment(customer.personalInfo.dateOfBirth).isValid() ? moment(customer.personalInfo.dateOfBirth).utc().format(shortDateFormat) : 'N/A' %>
 
+
+                                                        <tr>
+                                                            <td>Brand</td>
+                                                            <td>
+                                                                <%- car.brand%>
                                                             </td>
                                                         </tr>
+                                                        <tr>
+                                                            <td>Model</td>
+                                                            <td>
+                                                                <%- car.model%>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>Plate</td>
+                                                            <td>
+                                                                <%- car.plate%>
+                                                            </td>
+                                                        </tr>
+
                                                     </tbody>
                                                 </table>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <% if(customer.hasSubscription){ %>
-                                <div class="col-6 grid-margin stretch-card">
-                                    <div class="card card-rounded">
-                                        <div class="card-body">
-                                            <%- include('../partials/subscriptions/information.ejs' , {showManageBtn : true, customer : user, stripeSubscription, membershipStatus}); %>
-                                        </div>
-                                    </div>
-                                </div>
-                                <% } %>
                             </div>
                         </div>
                     </div>
@@ -153,17 +128,9 @@
     <script src="../js/settings.js"></script>
     <script src="../js/todolist.js"></script>
     <!-- endinject -->
-    <!-- Custom js for this page-->
-    <!-- <script>
-        var customer = <%# JSON.stringify(customer) %>;
-        console.log(customer);
-    </script> -->
     <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
-    <script type="text/javascript" src="../js/account.js"></script>
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
-    <script src="../js/dashboard.js"></script>
     <script src="../js/Chart.roundedBarCharts.js"></script>
-    <script src="../../js/register.js"></script>
 
     <!-- End custom js for this page-->
 
