--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -12,13 +12,26 @@
                 <span class="menu-title">Manage My Cars</span>
             </a>
         </li>
+        <!-- <li class="nav-item">
+            <a class="nav-link" href="/invoices">
+                <i class="fa-solid fa-calendar menu-icon"></i>
+                <span class="menu-title">Invoices</span>
+            </a>
+        </li> -->
+        <li class="nav-item">
+            <a class="nav-link" href="/charges">
+                <i class="fa-solid fa-clock-rotate-left menu-icon"></i>
+                <span class="menu-title">Stripe Charges</span>
+            </a>
+        </li>
+        <% if([roles.ADMIN, roles.MANAGER, roles.CASHIER].includes(user.role)) { %>
         <li class="nav-item">
             <a class="nav-link" href="/validateMembership">
                 <i class="fas fa-warehouse menu-icon"></i>
                 <span class="menu-title">Validate Membership</span>
             </a>
         </li>
-       
+        <% } %>
         <!-- <li class="nav-item">
             <a class="nav-link" href="/activity">
                 <i class="fas fa-book menu-icon"></i>
