--- a/views/cars/edit.ejs
+++ b/views/cars/edit.ejs
@@ -17,7 +17,6 @@
 
     <!-- endinject -->
     <!-- Plugin css for this page -->
-    <link rel="stylesheet" href="../vendors/datatables.net-bs4/dataTables.bootstrap4.css">
     <link rel="stylesheet" href="../js/select.dataTables.min.css">
     <!-- End plugin css for this page -->
     <!-- inject:css -->
@@ -47,7 +46,7 @@
                                                 <div class="row">
                                                     <div class="col-lg-6">
                                                         <div class="form-group">
-                                                            <label for="carName" class="sr-only required">Name</label>
+                                                            <label for="carName" class="required">Name</label>
 
                                                             <input type="text" id="carName" name="name"
                                                                 value="<%- car?.name%>"
@@ -58,7 +57,7 @@
                                                     <div class="col-lg-6">
 
                                                         <div class="form-group">
-                                                            <label for="carBrand" class="sr-only required">Car
+                                                            <label for="carBrand" class="required">Car
                                                                 Brand</label>
 
                                                             <input value="<%- car.brand%>" type="text" id="carBrand"
@@ -69,7 +68,7 @@
                                                     </div>
                                                     <div class="col-lg-6">
                                                         <div class="form-group">
-                                                            <label for="carModel" class="sr-only required">Car
+                                                            <label for="carModel" class="required">Car
                                                                 Model</label>
 
                                                             <input value="<%- car.model%>" type="text" id="carModel"
@@ -80,7 +79,7 @@
                                                     </div>
                                                     <div class="col-lg-6">
                                                         <div class="form-group">
-                                                            <label for="carPlate" class="sr-only required">Car
+                                                            <label for="carPlate" class="required">Car
                                                                 Plate</label>
 
                                                             <input value="<%- car.plate%>" type="text" id="carPlate"
@@ -144,7 +143,6 @@
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../js/dashboard.js"></script>
     <script src="../js/Chart.roundedBarCharts.js"></script>
-    <script src="../../js/register.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
