--- a/views/location/edit.ejs
+++ b/views/location/edit.ejs
@@ -20,7 +20,7 @@
 
     <!-- endinject -->
     <!-- Plugin css for this page -->
-    <link rel="stylesheet" href="../vendors/datatables.net-bs4/dataTables.bootstrap4.css">
+    <!-- <link rel="stylesheet" href="../vendors/datatables.net-bs4/dataTables.bootstrap4.css"> -->
     <link rel="stylesheet" href="../js/select.dataTables.min.css">
     <link rel="stylesheet" href="../vendors/select2/select2.min.css">
     <link rel="stylesheet" href="../vendors/select2-bootstrap-theme/select2-bootstrap.min.css">
