Store selectedProduct on session when is selected on pricing list.
Authenticate user when register after select product.
Create stripeCheckout route for server side.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -80,9 +80,8 @@
                 <div class="row">
                     <% if(products) { %>
                     <% for(product of products) { %>
-                    <% for(const price of product.priceInfo) { %>
-
-                    <div class="col-3 col-lg col-md mb-4">
+                    <% for(price of product.priceInfo) { %>
+                    <div class="col-lg-6 col-md-6 mb-4">
                         <div class="card h-100 shadow-lg">
                             <div class="card-body">
                                 <div class="text-center p-3">
@@ -118,8 +117,8 @@
                                     </svg> Vestibulum at eros</li>
                             </ul>
                             <div class="card-body text-center">
-                                <button class="btn btn-outline-primary btn-lg"
-                                    style="border-radius:30px">Select</button>
+                                <button class="btn btn-outline-primary btn-lg select-product-btn"
+                                    value="<%- price.id%>" style="border-radius:30px">Select</button>
                             </div>
                         </div>
                     </div>
@@ -156,6 +155,17 @@
         window.onload = function () {
             manageLangDropdown();
         };
+
+        $(document).ready(function () {
+            const selectProductBtn = $('.select-product-btn');
+            selectProductBtn.click(function () {
+                // const product = $("input[name='product']:checked").val()
+                const product = $(this).attr("value");
+                var params = new URLSearchParams();
+                params.append('product', product);
+                location.href = '/create-account?' + params.toString();
+            })
+        })
     </script>
 </body>
 
