--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="../../vendors/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="../../css/register.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- endinject -->
     <!-- Plugin css for this page -->
@@ -35,8 +38,13 @@
                 <div class="row w-100 mx-0">
                     <div class="col-lg-8 mx-auto">
                         <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-                            <a class="float-end btn-black" id="close-registration" href="/">
-                                <i class="mdi mdi-close icon-lg"></i>
+                            
+                            <a class="float-start btn-link" id="close-registration" href="/home">
+                                <i class="fa-solid fa-angle-left"></i>
+                                Back to Pricing
+                            </a>
+                            <a class="float-end btn-link" id="close-registration" href="/">
+                               Login <i class="fa-solid fa-arrow-right-to-bracket"></i>
                             </a>
                             <div class="brand-logo text-center">
                                 <img src="/images/mrquicks-logo.png" alt="logo">
