Implement change pasword views, routes, and auth functions.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,7 +61,7 @@
                         <a class="nav-link" id="UserDropdown" href="/account" aria-expanded="false">
                             <!-- <img class="img-xs rounded-circle" src="../../images/faces/profile/user.png"
                                     alt="Profile image"> -->
-                            <span class="text-uppercase">Home</span>
+                            <span class="text-uppercase">Account</span>
                         </a>
                         <% } else { %>
                         <a class="nav-link" id="UserDropdown" href="/login" aria-expanded="false">
