--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -57,9 +57,13 @@
                                             <div class="table-responsive mt-1">
                                                 <div
                                                     class="d-sm-flex justify-content-between align-items-start float-end">
+                                                    <a href="/changePassword/<%- customer.id%>?url=/view-user"
+                                                        type="button" class="btn btn-primary btn-icon-text me-2">
+                                                        <i class="fa-solid fa-key"></i> Change Password
+                                                    </a>
                                                     <a href="/edit-user/<%- customer.id%>?url=/view-user" data-id="user"
                                                         type="button" class="btn btn-primary btn-icon-text">
-                                                        <i class=" mdi mdi-square-edit-outline"></i> Edit
+                                                        <i class="fa-solid fa-user-pen"></i> Edit Personal Info
                                                     </a>
                                                 </div>
                                                 <table class="table table-hover">
