--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,7 +86,7 @@
                             <div class="card-body">
                                 <div class="text-center p-3">
                                     <h5 class="card-title"><%= product.name %></h5>
-                                    <small>Individual</small>
+                                    <!-- <small>Individual</small> -->
                                     <br><br>
                                     <span class="h2"><%= price.unit_amount%></span>
                                     <% if(price?.transform_quantity){ %>
@@ -98,25 +98,24 @@
                                     <br><br>
                                 </div>
                                 <p class="card-text"><%= product.description%></p>
+                                <div>
+                                    <ul class="list-group list-group-flush">
+                                        <% if(product?.perks) { %>
+
+                                        <% for(perk of product?.perks) { %>
+                                        <li class="list-group-item"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+                                                height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+                                                <path
+                                                    d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
+                                            </svg> <%= perk%></li>
+                                        <% } %>
+                                        <% } %>
+                                    </ul>
+                                </div>
+
                             </div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                        height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
-                                        <path
-                                            d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
-                                    </svg> Cras justo odio</li>
-                                <li class="list-group-item"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                        height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
-                                        <path
-                                            d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
-                                    </svg> Dapibus ac facilisis in</li>
-                                <li class="list-group-item"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                        height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
-                                        <path
-                                            d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
-                                    </svg> Vestibulum at eros</li>
-                            </ul>
-                            <div class="card-body text-center">
+                            <div class="card-footer text-center"
+                                style="background-color:transparent !important; border-top: none">
                                 <button class="btn btn-outline-primary btn-lg select-product-btn"
                                     value="<%- price.id%>">Select</button>
                             </div>
