--- a/views/cars/create.ejs
+++ b/views/cars/create.ejs
@@ -50,16 +50,7 @@
                                                 <div class="row">
                                                     <div class="col-lg-6">
                                                         <div class="form-group">
-                                                            <label for="carName" class="sr-only">Name</label>
-
-                                                            <input type="text" id="carName" name="name"
-                                                                class="form-control mb-3 form-control-lg"
-                                                                placeholder="Car Name" autofocus />
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-6">
-                                                        <div class="form-group">
-                                                            <label for="carBrand" class="sr-only required">Car
+                                                            <label for="carBrand" class="required">Car
                                                                 Brand</label>
 
                                                             <input type="text" id="carBrand" name="brand"
@@ -70,7 +61,7 @@
                                                     <div class="col-lg-6">
 
                                                         <div class="form-group">
-                                                            <label for="carModel" class="sr-only required">Car
+                                                            <label for="carModel" class="required">Car
                                                                 Model</label>
 
                                                             <input type="text" id="carModel" name="model"
@@ -81,7 +72,7 @@
                                                     <div class="col-lg-6">
 
                                                         <div class="form-group">
-                                                            <label for="carPlate" class="sr-only required">Car
+                                                            <label for="carPlate" class="required">Car
                                                                 Plate</label>
 
                                                             <input type="text" id="carPlate" name="plate"
