--- a/views/cars/index.ejs
+++ b/views/cars/index.ejs
@@ -61,14 +61,16 @@
                                             </div>
                                             <br>
                                             <div class="table-responsive  mt-1">
+                                                <% let enableActions = (user.role === roles.ADMIN || user.services.length < 1) %>
                                                 <table id="users" class="table table-hover stripe">
                                                     <thead>
                                                         <tr>
-                                                            <th>Name</th>
                                                             <th>Brand</th>
                                                             <th>Model</th>
                                                             <th>Plate</th>
+                                                            <% if(enableActions) { %>
                                                             <th>Action</th>
+                                                            <% } %>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
@@ -76,21 +78,15 @@
                                                         <% for(const car of cars) { %>
                                                         <tr>
                                                             <td>
-                                                                <a class="btn-link" href="/car/<%- car.id%>">
-                                                                    <%- car.name %>
-                                                                </a>
-                                                            </td>
-                                                            <td>
-                                                                <%- car.brand%>
-                                                            </td>
-                                                            <td>
-                                                                <%- car.model%>
-                                                            </td>
-                                                            <td>
-                                                                <%- car.plate %>
+                                                                <a class="btn-link"
+                                                                    href="/car/<%- car.id%>"><%- car.brand%></a>
                                                             </td>
 
+                                                            <td><%- car.model%></td>
+                                                            <td><%- car.plate%></td>
+
                                                             <td>
+                                                                <% if(enableActions) { %>
                                                                 <a href="/edit-car/<%- car.id%>?url=/cars" type="button"
                                                                     class="btn btn-icon btn-icon-no-border no-margin">
                                                                     <i class="far fa-edit icon-sm"></i>
@@ -101,6 +97,7 @@
                                                                     class="btn btn-icon btn-icon-no-border no-margin">
                                                                     <i class="fas fa-trash-alt icon-sm text-danger"></i>
                                                                 </a>
+                                                                <% } %>
                                                             </td>
                                                         </tr>
                                                         <% } %>
