--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -64,6 +64,7 @@
                                                 method="post">
                                                 <input type="text" id="id" name="id" value="<%- customer.id%>" hidden />
                                                 <div class="row">
+                                                    <% if(user.role === roles.ADMIN) { %>
                                                     <div class="col-lg-6">
                                                         <div class="form-group">
                                                             <label class="required" for="email">Email</label>
@@ -71,8 +72,9 @@
                                                                 name="email" class="form-control form-control-lg"
                                                                 placeholder="example@gmail.com" required />
 
-                                                        </div>            
-                                                        <% if(user.role === roles.ADMIN){ %>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-6">
                                                         <div class="form-group">
                                                             <label class="required" for="role">Role</label>
                                                             <select name="role" id="role"
@@ -86,8 +88,9 @@
                                                                 <% }%>
                                                             </select>
                                                         </div>
-                                                        <% } %>
-
+                                                    </div>
+                                                    <% } %>
+                                                    <div class="col-lg-6">
                                                         <div class="form-group">
                                                             <label for="firstName" class="required">First Name</label>
 
@@ -96,7 +99,8 @@
                                                                 class="form-control mb-3 form-control-lg"
                                                                 placeholder="First Name" required autofocus />
                                                         </div>
-
+                                                    </div>
+                                                    <div class="col-lg-6">
                                                         <div class="form-group">
                                                             <label for="lastName" class="required">Last Name</label>
 
@@ -105,7 +109,8 @@
                                                                 class="form-control mb-3 form-control-lg"
                                                                 placeholder="LastName" required autofocus />
                                                         </div>
-
+                                                    </div>
+                                                    <div class="col-lg-6">
                                                         <div class="form-group">
                                                             <label for="phoneNumber" class="required">Phone
                                                                 Number</label>
@@ -129,6 +134,8 @@
                                                                 class="form-control mb-3 form-control-lg" required
                                                                 autofocus />
                                                         </div>
+                                                    </div>
+                                                    <div class="col-lg-6">
                                                         <div class="form-group">
                                                             <label for="city" class="required">City</label>
 
@@ -137,19 +144,18 @@
                                                                 class="form-control form-control-lg" placeholder="City"
                                                                 required autofocus />
                                                         </div>
-
                                                     </div>
-                                                    <div class="row">
-                                                        <div class="mt-3">
+                                                </div>
+                                                <div class="row">
+                                                    <div class="mt-3">
+                                                        <a href="<%- url%>"
+                                                            class="btn btn-block btn-light btn-lg font-weight-medium auth-form-btn float-end">Cancel</a>
 
-                                                            <a href="<%- url%>"
-                                                                class="btn btn-block btn-light btn-lg font-weight-medium auth-form-btn float-end">Cancel</a>
-
-                                                            <button
-                                                                class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end"
-                                                                type="submit">Save</button>
-                                                        </div>
+                                                        <button
+                                                            class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end"
+                                                            type="submit">Save</button>
                                                     </div>
+                                                </div>
                                             </form>
 
                                             <% }%>
@@ -185,16 +191,11 @@
     <script src="../js/todolist.js"></script>
     <!-- endinject -->
     <!-- Custom js for this page-->
-    <script>
-        var customer = <% - JSON.stringify(customer) %>;
-        console.log(customer);
-    </script>
     <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
     <script type="text/javascript" src="../js/account.js"></script>
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../js/dashboard.js"></script>
     <script src="../js/Chart.roundedBarCharts.js"></script>
-    <script src="../../js/register.js"></script>
     <!-- End custom js for this page-->
 
 </body>
