--- a/views/cars/view.ejs
+++ b/views/cars/view.ejs
@@ -50,13 +50,15 @@
                                     <div class="card card-rounded">
                                         <div class="card-body">
                                             <div class="table-responsive mt-1">
+                                                <% if(canManageCars && canEditCar) { %>
                                                 <div
                                                     class="d-sm-flex justify-content-between align-items-start float-end">
-                                                    <a href="/edit-car/<%- car.id%>?url=/view-car" type="button"
+                                                    <a href="/edit-car/<%- car.id%>?url=/car" type="button"
                                                         class="btn btn-primary btn-icon-text">
                                                         <i class=" mdi mdi-square-edit-outline"></i> Edit
                                                     </a>
                                                 </div>
+                                                <% } %>
                                                 <table class="table table-hover">
                                                     <thead>
                                                         <tr>
