Implement Municipalities dropwdown.

--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -112,6 +112,12 @@
 
                                                             </td>
                                                         </tr>
+                                                        <tr>
+                                                            <td>City</td>
+                                                            <td>
+                                                                <%- customer.personalInfo.city %>
+                                                            </td>
+                                                        </tr>
                                                     </tbody>
                                                 </table>
                                             </div>
