--- a/public/css/vertical-layout-light/style.css
+++ b/public/css/vertical-layout-light/style.css
@@ -10739,7 +10739,8 @@ progress {
 .tt-hint {
     display: block;
     width: 100%;
-    padding: 0.875rem 1.375rem;
+    /* padding: 0.875rem 1.375rem; */
+    padding: .4375rem 0;
     font-size: 0.875rem;
     font-weight: 400;
     line-height: 1;
@@ -10976,7 +10977,7 @@ progress {
 
 .form-control-lg {
     min-height: 3.175rem;
-    padding: 0.94rem 1.94rem;
+    padding: 0.94rem 1.94rem !important;
     font-size: 1.25rem;
     border-radius: 0.3rem;
 }
@@ -29976,10 +29977,13 @@ table.dataTable tbody td.select-checkbox:after {
 
 .select2-container--default .select2-selection--single {
     height: auto;
+    min-height: 3.175rem;
 }
 
 .select2-container--default .select2-selection--single .select2-selection__rendered {
-    line-height: 14px;
+    line-height: 2.5;
+    /* padding: 0; */
+    padding: 0 1.94rem;
 }
 
 .select2-container--default .select2-dropdown {
