--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -17,9 +17,10 @@
     <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="../../css/register.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../../vendors/select2/select2.min.css">
+    <link rel="stylesheet" href="../../vendors/select2-bootstrap-theme/select2-bootstrap.min.css">
     <!-- endinject -->
     <!-- Plugin css for this page -->
     <!-- Plugin css for this page -->
@@ -38,13 +39,13 @@
                 <div class="row w-100 mx-0">
                     <div class="col-lg-8 mx-auto">
                         <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-                            
+
                             <a class="float-start btn-link" id="close-registration" href="/home">
                                 <i class="fa-solid fa-angle-left"></i>
                                 Back to Pricing
                             </a>
                             <a class="float-end btn-link" id="close-registration" href="/">
-                               Login <i class="fa-solid fa-arrow-right-to-bracket"></i>
+                                Login <i class="fa-solid fa-arrow-right-to-bracket"></i>
                             </a>
                             <div class="brand-logo text-center">
                                 <img src="/images/mrquicks-logo.png" alt="logo">
@@ -120,7 +121,8 @@
                                         <div class="form-group">
                                             <label for="dateOfBirth" class="required"><%= lingua.dateOfBirth%></label>
 
-                                            <input type="text" id="dateOfBirth" onfocus="(this.type='date')" name="dateOfBirth" placeholder="mm/dd/yyyy"
+                                            <input type="text" id="dateOfBirth" onfocus="(this.type='date')"
+                                                name="dateOfBirth" placeholder="mm/dd/yyyy"
                                                 class="form-control mb-3 form-control-lg" required autofocus />
                                         </div>
                                     </div>
@@ -129,9 +131,13 @@
                                         <div class="form-group">
                                             <label for="city" class="required"><%= lingua.city%></label>
 
-                                            <input type="text" id="city" name="city"
-                                                class="form-control form-control-lg" placeholder="City" required
-                                                autofocus />
+                                            <select id="city" name="city" required
+                                                class="form-control mb-3 form-control-lg js-example-basic-single w-100">
+                                                <option value="">Select One</option>
+                                                <% for(const municipality of municipalities) { %>
+                                                <option value="<%= municipality%>"><%= municipality%></option>
+                                                <% } %>
+                                            </select>
                                         </div>
                                     </div>
                                 </div>
@@ -170,11 +176,14 @@
     <script src="../../js/register.js"></script>
     <script src="./js/jquery.cookie.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
+    <script src="../../vendors/select2/select2.min.js"></script>
+    <script src="../../js/select2.js"></script>
 
     <!-- End custom js for this page-->
+    <script>
+        jQuery(document).ready(function () { jQuery("#phoneNumber").mask("999-999-9999"); });
+    </script>
 </body>
-<script>
-    jQuery(document).ready(function () { jQuery("#phoneNumber").mask("999-999-9999"); });
-</script>
+
 
 </html>
