--- a/views/user/create.ejs
+++ b/views/user/create.ejs
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="../vendors/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" href="../vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="../../css/register.css">
+    <link rel="stylesheet" href="../vendors/select2/select2.min.css">
+    <link rel="stylesheet" href="../vendors/select2-bootstrap-theme/select2-bootstrap.min.css">
 
     <!-- endinject -->
     <!-- Plugin css for this page -->
@@ -136,9 +138,14 @@
                                                         <div class="form-group">
                                                             <label for="city" class="required">City</label>
 
-                                                            <input type="text" id="city" name="city"
-                                                                class="form-control form-control-lg" placeholder="City"
-                                                                required autofocus />
+                                                            <select id="city" name="city" required
+                                                                class="form-control mb-3 form-control-lg js-example-basic-single w-100">
+                                                                <option value="">Select One</option>
+                                                                <% for(const municipality of municipalities) { %>
+                                                                <option value="<%= municipality%>"><%= municipality%>
+                                                                </option>
+                                                                <% } %>
+                                                            </select>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -171,7 +178,6 @@
     <script src="../vendors/js/vendor.bundle.base.js"></script>
     <!-- endinject -->
     <!-- Plugin js for this page -->
-    <script src="../vendors/chart.js/Chart.min.js"></script>
     <script src="../vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
     <script src="../vendors/progressbar.js/progressbar.min.js"></script>
     <script type="text/javascript"
@@ -183,24 +189,23 @@
     <script src="../js/hoverable-collapse.js"></script>
     <script src="../js/template.js"></script>
     <script src="../js/settings.js"></script>
-    <script src="../js/todolist.js"></script>
     <!-- endinject -->
     <!-- Custom js for this page-->
 
     <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
-    <script type="text/javascript" src="../js/account.js"></script>
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../js/dashboard.js"></script>
-    <script src="../js/Chart.roundedBarCharts.js"></script>
     <script src="../../js/register.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
-
+    <script src="../vendors/select2/select2.min.js"></script>
+    <script src="../js/select2.js"></script>
     <!-- End custom js for this page-->
 
     <%- include('../partials/alerts.ejs', {message, alertType}); %>
+    <script>
+        jQuery(document).ready(function () { jQuery("#phoneNumber").mask("999-999-9999"); });
+    </script>
 </body>
-<script>
-    jQuery(document).ready(function () { jQuery("#phoneNumber").mask("999-999-9999"); });
-</script>
+
 
 </html>
