--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -14,10 +14,11 @@
     <link rel="stylesheet" href="../vendors/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" href="../vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="../../css/register.css">
+    <link rel="stylesheet" href="../vendors/select2/select2.min.css">
+    <link rel="stylesheet" href="../vendors/select2-bootstrap-theme/select2-bootstrap.min.css">
 
     <!-- endinject -->
     <!-- Plugin css for this page -->
-    <!-- <link rel="stylesheet" href="../vendors/datatables.net-bs4/dataTables.bootstrap4.css"> -->
     <link rel="stylesheet" href="../js/select.dataTables.min.css">
     <!-- End plugin css for this page -->
     <!-- inject:css -->
@@ -27,7 +28,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
+  </head>
 
 <body class="sidebar-icon-only">
     <div class="container-scroller">
@@ -37,18 +38,6 @@
         <div class="container-fluid page-body-wrapper">
             <!-- partial:partials/_sidebar.html -->
             <%- include('../partials/sidebar.ejs' , {user}); %>
-
-            <!-- <nav class="sidebar sidebar-offcanvas" id="sidebar">
-                <ul class="nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/account">
-                            <i class="mdi mdi-grid-large menu-icon"></i>
-                            <span class="menu-title">Dashboard</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav> -->
-            <!-- partial -->
             <div class="main-panel">
                 <div class="content-wrapper">
                     <div class="row">
@@ -138,11 +127,16 @@
                                                     <div class="col-lg-6">
                                                         <div class="form-group">
                                                             <label for="city" class="required">City</label>
-
-                                                            <input value="<%- customer.personalInfo.city%>" type="text"
-                                                                id="city" name="personalInfo.city"
-                                                                class="form-control form-control-lg" placeholder="City"
-                                                                required autofocus />
+                                                            <select id="city" name="personalInfo.city" required
+                                                                class="form-control mb-3 form-control-lg js-example-basic-single w-100">
+                                                                <option value="">Select One</option>
+                                                                <% for(const municipality of municipalities) { %>
+                                                                <% var selected = (customer?.personalInfo?.city == municipality) ? "selected" : "";   %>
+                                                                <option value="<%= municipality%>" <%= selected%>>
+                                                                    <%= municipality%>
+                                                                </option>
+                                                                <% } %>
+                                                            </select>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -176,9 +170,7 @@
     <script src="../vendors/js/vendor.bundle.base.js"></script>
     <!-- endinject -->
     <!-- Plugin js for this page -->
-    <script src="../vendors/chart.js/Chart.min.js"></script>
     <script src="../vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
-    <script src="../vendors/progressbar.js/progressbar.min.js"></script>
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
@@ -187,17 +179,19 @@
     <script src="../js/off-canvas.js"></script>
     <script src="../js/hoverable-collapse.js"></script>
     <script src="../js/template.js"></script>
-    <script src="../js/settings.js"></script>
-    <script src="../js/todolist.js"></script>
     <!-- endinject -->
     <!-- Custom js for this page-->
     <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
     <script type="text/javascript" src="../js/account.js"></script>
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../js/dashboard.js"></script>
-    <script src="../js/Chart.roundedBarCharts.js"></script>
+    <!-- <script src="../js/Chart.roundedBarCharts.js"></script> -->
+    <script src="../vendors/select2/select2.min.js"></script>
+    <script src="../js/select2.js"></script>
     <!-- End custom js for this page-->
-
+    <script>
+        jQuery(document).ready(function () { jQuery("#phoneNumber").mask("999-999-9999"); });
+    </script>
 </body>
 
 </html>
