Upper case for plate input.

--- a/views/cars/create.ejs
+++ b/views/cars/create.ejs
@@ -90,7 +90,7 @@
                                                                 Plate</label>
 
                                                             <input type="text" id="carPlate" name="plate"
-                                                                class="form-control mb-3 form-control-lg"
+                                                                class="form-control mb-3 form-control-lg text-uppercase"
                                                                 placeholder="Car Plate" autofocus required />
                                                         </div>
                                                     </div>
