--- a/views/cars/edit.ejs
+++ b/views/cars/edit.ejs
@@ -82,7 +82,8 @@
                                                                 Plate</label>
 
                                                             <input value="<%- car.plate%>" type="text" id="carPlate"
-                                                                name="plate" class="form-control mb-3 form-control-lg"
+                                                                name="plate"
+                                                                class="form-control mb-3 form-control-lg text-uppercase"
                                                                 placeholder="Car Plate" autofocus required />
                                                         </div>
                                                     </div>
